--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@ body{
     background-color: red;
 }
 .div_bg{
-    
+    padding: 40px 40px 40px 40px;
     background-color: rgb(220, 179, 223);
 }
